--- a/dendron.yml
+++ b/dendron.yml
@@ -114,7 +114,7 @@ publishing:
         action: useVault
         payload:
             - notes
-    theme: dark
+    theme: light
     giscus:
         id: comments
         repo: Mjvolk3/MATH-490-Project
@@ -122,7 +122,7 @@ publishing:
         category: Announcements
         categoryId: DIC_kwDOIjXV184CTACu
         mapping: pathname
-        theme: dark_dimmed
+        theme: light
         strict: '0'
         reactionsEnabled: '1'
         emitMetadata: '0'
